<resources>
    <string name="app_name">Tp3_moviles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="listar">Listar</string>
    <string name="cargar">Cargar</string>
    <string name="salir">Salir</string>
    <string name="precio">Precio</string>
    <string name="codigo">Codigo</string>
    <string name="descripcion">Descripcion</string>
    <string name="modificar">Modificar</string>
</resources>